MCA App/Release/MCA Demo org/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Count_of_Events__c</fullName>
        <description>Count of all events</description>
        <formula>IF( IsTask,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Count of all events</inlineHelpText>
        <label>Count of Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Tasks__c</fullName>
        <formula>IF( IsTask,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count of Tasks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_Due__c</fullName>
        <formula>IF(TEXT(Status)=&quot;Completed&quot;, ( DATEVALUE(LastModifiedDate) -  ActivityDate),TODAY() -  ActivityDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Primary_Resource__c</fullName>
        <label>Primary Resource</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskTemplateId__c</fullName>
        <description>Lookup link to Task Template</description>
        <externalId>true</externalId>
        <label>Task Template Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i__EmailHasAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the linked email have Attachments?</description>
        <inlineHelpText>Does the linked email have Attachments?</inlineHelpText>
        <label>Linked email has attachments?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>i__EmailId__c</fullName>
        <description>deprecated</description>
        <inlineHelpText>deprecated</inlineHelpText>
        <label>EmailId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>i__Email__c</fullName>
        <description>ID of the iHance Email object this Task was copied from.</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the iHance Email object this Task was copied from.</inlineHelpText>
        <label>Email</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__CallRecordingURL__c</fullName>
        <description>Link to the call recording</description>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Date_Time__c</fullName>
        <label>Call Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Dial_Number__c</fullName>
        <description>Total number of dials on the record being called</description>
        <label>Call Dial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Hour__c</fullName>
        <description>Hour in which the call was placed from the record&apos;s perspective</description>
        <label>Call Hour</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Lead_Status__c</fullName>
        <description>Lead Status of the record called</description>
        <label>Call Lead Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Ring_Time__c</fullName>
        <description>Ring Time of the phone call</description>
        <label>Call Ring Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>qbdialer__Call_Time_Zone__c</fullName>
        <description>Time zone of the number being called</description>
        <label>Call Time Zone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>qbdialer__Callback_Date_Time__c</fullName>
        <label>Callback Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>qbdialer__ImpressionId__c</fullName>
        <externalId>true</externalId>
        <label>Impression ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>qbdialer__SMSReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Text message reminders will be sent to all attendees at the set reminder time.</inlineHelpText>
        <label>Send text msg reminder to all attendees</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>activities__Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Overdue Tasks</label>
    </listViews>
    <listViews>
        <fullName>activities__Today_Overdue_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Today + Overdue Tasks</label>
    </listViews>
    <listViews>
        <fullName>activities__TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>activities__Tomorrow_s_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Tomorrow&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_Last_7_Days</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Geopointe Activities (Last 7 Days)</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_all</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <label>Geopointe Activities (all)</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_today</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Geopointe Activities (today)</label>
    </listViews>
</CustomObject>